--- a/messages_fralz.properties
+++ b/messages_fralz.properties
@@ -1,7 +1,7 @@
 # Single quotes have to be doubled: ''
 # Essentials 2.19.7 complètement traduit et personnalisé.
 # Erreurs : DM alzhetv sur Twitter
-# by: Wyendar - Update (alz <3)
+# by: Wyendar - Update (alzhe <3)
 action=§r\n§e§lPUBLICITÉ §8| §r{0}§7: §f{1}\n§r
 addedToAccount=§e§lINFO §8| §aLa somme de §e{0} §aa été ajoutée à votre solde.
 addedToOthersAccount=§e§lINFO §8| §e{0}§a ajoutés au compte de §e{1}§a. Nouveau solde \: §e{2}
